# AF_XDP-reimpl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
bpf/: xdp_prog_bpf.c
docs/: BUILD_AND_TEST.md
include/afxdp/: common.hpp  frame_alloc.hpp  receiver.hpp  ring.hpp  transmitter.hpp  umem.hpp  xdp_loader.hpp  xsk.hpp
